--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Happy Birthday, Caicai!</title>
+    <title>Happy Birthday, ABie!</title>
     <link rel="stylesheet" href="lib/reveal.css">
     <link rel="stylesheet" href="style.css">
   </head>
@@ -54,12 +54,43 @@ fn main() {
           <h3>Happy Birthday!</h3>
           <img src="img/photo6217273183585806938.jpg" alt="sheepLoveDabanban"/>
         </section>
+        <section>
+          <center><h1>Card From Sheep!</h1></center>
+          <div id="card">
+            <div class="heart" id="heart1">
+              <div id="half1">
+                <div id="circle"></div>
+                <div id="rec"></div>
+              </div>
+              <div id="half2">
+                <div id="circle"></div>
+                <div id="rec"></div>
+              </div>
+            </div>
+            <div id="message">
+              <h2 style="text-transform: none;">
+                Happy Birthday! Caicai!<br/>
+                Always 17 year old!</h2>
+            </div>
+            <div class="heart" id="heart2">
+              <div id="half1">
+                <div id="circle"></div>
+                <div id="rec"></div>
+              </div>
+              <div id="half2">
+                <div id="circle"></div>
+                <div id="rec"></div>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
     </div>
     <script src="lib/reveal.js"></script>
     <script>Reveal.initialize({
       width: '100%', height: '100%', margin: 0,
       history: true, dependencies: [{ src: 'lib/highlight.js', async: true }],
+      transition: 'concave'
     });</script>
     <script async src="birthday.js"> </script>
     <script src="lib/pixi.js"></script>
